tests/test_files/neg/bad_flow_seal2.s
	mov r1 pc
	restrict r1 (U, GLOBAL) 				; FAIL: attempt to restrict SCap with a Seal Permission
	halt
